--- a/arthur-bell/index.html
+++ b/arthur-bell/index.html
@@ -333,7 +333,7 @@ img.emoji {
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="6a8a9b3f22"></p>
-<input type="hidden" id="ak_js" name="ak_js" value="126"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
+<input type="hidden" id="ak_js" name="ak_js" value="109"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
 </form>	</div>
 <!-- #respond -->
 	</div>
@@ -354,7 +354,7 @@ img.emoji {
 <ul class="wp-block-latest-posts__list wp-block-latest-posts">
 <li><a href="https://annthuy.github.io/nhuthuy_wordpress/genshin-impact/">Genshin Impact</a></li>
 <li><a href="https://annthuy.github.io/nhuthuy_wordpress/gioi-thieu-50-sac-thai/">Bảo vệ: Tiểu thuyết &#8221; Fifty Shades&#8221;</a></li>
-<li><a href="https://annthuy.github.io/nhuthuy_wordpress/xuyen-thanh-nam-phu-be-cong-nam-chinh/">Bảo vệ: XUYÊN THÀNH NAM PHỤ BẺ CONG NAM CHÍNH</a></li>
+<li><a href="https://annthuy.github.io/nhuthuy_wordpress/xuyen-thanh-nam-phu-be-cong-nam-chinh/">XUYÊN THÀNH NAM PHỤ BẺ CONG NAM CHÍNH</a></li>
 <li><a href="https://annthuy.github.io/nhuthuy_wordpress/arthur-bell/">Rose &#8216;Arthur Belle&#8217;</a></li>
 </ul>
 </div></div></div>
