--- a/s%E1%BA%A3n%20ph%E1%BA%A9m/moc-khoa-no-game-no-life/index.html
+++ b/s%E1%BA%A3n%20ph%E1%BA%A9m/moc-khoa-no-game-no-life/index.html
@@ -485,8 +485,8 @@ img.emoji {
 	<form class="cart" action="https://annthuy.github.io/nhuthuy_wordpress/sản%20phẩm/moc-khoa-no-game-no-life/" method="post" enctype="multipart/form-data">
 		
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_614dfbf54dce9">Móc Khóa No Game No Life số lượng</label>
-		<input type="number" id="quantity_614dfbf54dce9" class="input-text qty text" step="1" min="1" max="30" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
+				<label class="screen-reader-text" for="quantity_614e0405a649d">Móc Khóa No Game No Life số lượng</label>
+		<input type="number" id="quantity_614e0405a649d" class="input-text qty text" step="1" min="1" max="30" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="232" class="single_add_to_cart_button button alt">Thêm vào giỏ hàng</button>
@@ -559,7 +559,7 @@ img.emoji {
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="14c97cc951"></p>
-<input type="hidden" id="ak_js" name="ak_js" value="178"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
+<input type="hidden" id="ak_js" name="ak_js" value="195"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
 </form>	</div>
 <!-- #respond -->
 				</div>
