--- a/sản%20phẩm/moc-khoa-sword-art-online/index.html
+++ b/sản%20phẩm/moc-khoa-sword-art-online/index.html
@@ -485,8 +485,8 @@ img.emoji {
 	<form class="cart" action="https://annthuy.github.io/nhuthuy_wordpress/sản%20phẩm/moc-khoa-sword-art-online/" method="post" enctype="multipart/form-data">
 		
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_614dfba336ea9">Móc Khóa Sword Art Online số lượng</label>
-		<input type="number" id="quantity_614dfba336ea9" class="input-text qty text" step="1" min="1" max="25" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
+				<label class="screen-reader-text" for="quantity_614e03af36b35">Móc Khóa Sword Art Online số lượng</label>
+		<input type="number" id="quantity_614e03af36b35" class="input-text qty text" step="1" min="1" max="25" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="235" class="single_add_to_cart_button button alt">Thêm vào giỏ hàng</button>
@@ -574,7 +574,7 @@ img.emoji {
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="0a8ba21277"></p>
-<input type="hidden" id="ak_js" name="ak_js" value="74"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
+<input type="hidden" id="ak_js" name="ak_js" value="72"><textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100" style="display: none !important;"></textarea>
 </form>	</div>
 <!-- #respond -->
 				</div>
