--- a/product/ao-hoodie-meo-nyanko-sensei-anime-natsume-yuujinchou/index.html
+++ b/product/ao-hoodie-meo-nyanko-sensei-anime-natsume-yuujinchou/index.html
@@ -743,8 +743,8 @@ h1, h2, h3, h4, h5, h6, .hestia-title, .hestia-title.title-in-content, p.meta-in
 	<form class="cart" action="https://annthuy.github.io/nhuthuy_wordpress/product/ao-hoodie-meo-nyanko-sensei-anime-natsume-yuujinchou/" method="post" enctype="multipart/form-data">
 		
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_616b0f8677de3">Áo hoodie Mèo Nyanko-sensei - anime Natsume Yuujinchou số lượng</label>
-		<input type="number" id="quantity_616b0f8677de3" class="input-text qty text" step="1" min="1" max="4" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
+				<label class="screen-reader-text" for="quantity_616b1d0d0d5c8">Áo hoodie Mèo Nyanko-sensei - anime Natsume Yuujinchou số lượng</label>
+		<input type="number" id="quantity_616b1d0d0d5c8" class="input-text qty text" step="1" min="1" max="4" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="420" class="single_add_to_cart_button button alt">Thêm vào giỏ hàng</button>
