--- a/product/day-chuyen-cardcaptor-sakura-loai-2/index.html
+++ b/product/day-chuyen-cardcaptor-sakura-loai-2/index.html
@@ -743,8 +743,8 @@ h1, h2, h3, h4, h5, h6, .hestia-title, .hestia-title.title-in-content, p.meta-in
 		<tbody>
 			<tr id="product-440" class="woocommerce-grouped-product-list-item product type-product post-440 status-publish last instock product_cat-day-chuyen product_tag-cardcaptor-sakura product_tag-day-chuyen has-post-thumbnail shipping-taxable purchasable product-type-simple">
 <td class="woocommerce-grouped-product-list-item__quantity">	<div class="quantity">
-				<label class="screen-reader-text" for="quantity_616b0f0d99956">Dây Chuyền Ngôi Sao Cardcaptor Sakura số lượng</label>
-		<input type="number" id="quantity_616b0f0d99956" class="input-text qty text" step="1" min="0" max="4" name="quantity[440]" value="" title="SL" size="4" placeholder="0" inputmode="numeric">
+				<label class="screen-reader-text" for="quantity_616b1cb9c4396">Dây Chuyền Ngôi Sao Cardcaptor Sakura số lượng</label>
+		<input type="number" id="quantity_616b1cb9c4396" class="input-text qty text" step="1" min="0" max="4" name="quantity[440]" value="" title="SL" size="4" placeholder="0" inputmode="numeric">
 			</div>
 	</td>
 <td class="woocommerce-grouped-product-list-item__label"><label for="product-440"><a href="https://annthuy.github.io/nhuthuy_wordpress/product/day-chuyen-ngoi-sao-cardcaptor-sakura/">Dây Chuyền Ngôi Sao Cardcaptor Sakura</a></label></td>
@@ -754,8 +754,8 @@ h1, h2, h3, h4, h5, h6, .hestia-title, .hestia-title.title-in-content, p.meta-in
 </tr>
 <tr id="product-443" class="woocommerce-grouped-product-list-item product type-product post-443 status-publish first instock product_cat-day-chuyen product_tag-cardcaptor-sakura product_tag-day-chuyen has-post-thumbnail shipping-taxable purchasable product-type-simple">
 <td class="woocommerce-grouped-product-list-item__quantity">	<div class="quantity">
-				<label class="screen-reader-text" for="quantity_616b0f0d9a2ea">Dây Chuyền Clow Cardcaptor Sakura số lượng</label>
-		<input type="number" id="quantity_616b0f0d9a2ea" class="input-text qty text" step="1" min="0" max="5" name="quantity[443]" value="" title="SL" size="4" placeholder="0" inputmode="numeric">
+				<label class="screen-reader-text" for="quantity_616b1cb9c4c20">Dây Chuyền Clow Cardcaptor Sakura số lượng</label>
+		<input type="number" id="quantity_616b1cb9c4c20" class="input-text qty text" step="1" min="0" max="5" name="quantity[443]" value="" title="SL" size="4" placeholder="0" inputmode="numeric">
 			</div>
 	</td>
 <td class="woocommerce-grouped-product-list-item__label"><label for="product-443"><a href="https://annthuy.github.io/nhuthuy_wordpress/product/day-chuyen-clow-cardcaptor-sakura/">Dây Chuyền Clow Cardcaptor Sakura</a></label></td>
@@ -837,7 +837,7 @@ h1, h2, h3, h4, h5, h6, .hestia-title, .hestia-title.title-in-content, p.meta-in
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="9bc7b5b4a4"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js" name="ak_js" value="228"><script>document.getElementById( "ak_js" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js" name="ak_js" value="189"><script>document.getElementById( "ak_js" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 				</div>
