--- a/product/mu-bong-pikachu-anime-pokemon/index.html
+++ b/product/mu-bong-pikachu-anime-pokemon/index.html
@@ -743,8 +743,8 @@ h1, h2, h3, h4, h5, h6, .hestia-title, .hestia-title.title-in-content, p.meta-in
 	<form class="cart" action="https://annthuy.github.io/nhuthuy_wordpress/product/mu-bong-pikachu-anime-pokemon/" method="post" enctype="multipart/form-data">
 		
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_616b0f80cb21b">Mũ bông Pikachu - anime Pokemon số lượng</label>
-		<input type="number" id="quantity_616b0f80cb21b" class="input-text qty text" step="1" min="1" max="5" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
+				<label class="screen-reader-text" for="quantity_616b1d0a07d8d">Mũ bông Pikachu - anime Pokemon số lượng</label>
+		<input type="number" id="quantity_616b1d0a07d8d" class="input-text qty text" step="1" min="1" max="5" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="433" class="single_add_to_cart_button button alt">Thêm vào giỏ hàng</button>
@@ -816,7 +816,7 @@ h1, h2, h3, h4, h5, h6, .hestia-title, .hestia-title.title-in-content, p.meta-in
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="cf3af7fe8b"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js" name="ak_js" value="131"><script>document.getElementById( "ak_js" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js" name="ak_js" value="238"><script>document.getElementById( "ak_js" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 				</div>
