--- a/product/vong-tay-your-name-tang-kem-chot/index.html
+++ b/product/vong-tay-your-name-tang-kem-chot/index.html
@@ -743,8 +743,8 @@ h1, h2, h3, h4, h5, h6, .hestia-title, .hestia-title.title-in-content, p.meta-in
 	<form class="cart" action="https://annthuy.github.io/nhuthuy_wordpress/product/vong-tay-your-name-tang-kem-chot/" method="post" enctype="multipart/form-data">
 		
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_616b0f089da7a">Vòng tay Your Name Tặng Kèm Chốt số lượng</label>
-		<input type="number" id="quantity_616b0f089da7a" class="input-text qty text" step="1" min="1" max="5" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
+				<label class="screen-reader-text" for="quantity_616b1cb6c04ff">Vòng tay Your Name Tặng Kèm Chốt số lượng</label>
+		<input type="number" id="quantity_616b1cb6c04ff" class="input-text qty text" step="1" min="1" max="5" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="452" class="single_add_to_cart_button button alt">Thêm vào giỏ hàng</button>
@@ -832,7 +832,7 @@ h1, h2, h3, h4, h5, h6, .hestia-title, .hestia-title.title-in-content, p.meta-in
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="10ce3caf2e"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js" name="ak_js" value="60"><script>document.getElementById( "ak_js" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js" name="ak_js" value="217"><script>document.getElementById( "ak_js" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 				</div>
