--- a/product/mu-snapback-anime-ansatsu-kyoushitsu/index.html
+++ b/product/mu-snapback-anime-ansatsu-kyoushitsu/index.html
@@ -650,8 +650,8 @@ h1, h2, h3, h4, h5, h6, .hestia-title, .hestia-title.title-in-content, p.meta-in
 	<form class="cart" action="https://annthuy.github.io/nhuthuy_wordpress/product/mu-snapback-anime-ansatsu-kyoushitsu/" method="post" enctype="multipart/form-data">
 		
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_616d150b38322">Mũ snapback anime Ansatsu Kyoushitsu số lượng</label>
-		<input type="number" id="quantity_616d150b38322" class="input-text qty text" step="1" min="1" max="9" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
+				<label class="screen-reader-text" for="quantity_616d18c6ec8ba">Mũ snapback anime Ansatsu Kyoushitsu số lượng</label>
+		<input type="number" id="quantity_616d18c6ec8ba" class="input-text qty text" step="1" min="1" max="9" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="430" class="single_add_to_cart_button button alt">Thêm vào giỏ hàng</button>
@@ -724,7 +724,7 @@ h1, h2, h3, h4, h5, h6, .hestia-title, .hestia-title.title-in-content, p.meta-in
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="3d60cf7b4b"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js" name="ak_js" value="45"><script>document.getElementById( "ak_js" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js" name="ak_js" value="107"><script>document.getElementById( "ak_js" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 				</div>
