--- a/product/ao-hoodie-meo-nyanko-sensei-anime-natsume-yuujinchou/index.html
+++ b/product/ao-hoodie-meo-nyanko-sensei-anime-natsume-yuujinchou/index.html
@@ -650,8 +650,8 @@ h1, h2, h3, h4, h5, h6, .hestia-title, .hestia-title.title-in-content, p.meta-in
 	<form class="cart" action="https://annthuy.github.io/nhuthuy_wordpress/product/ao-hoodie-meo-nyanko-sensei-anime-natsume-yuujinchou/" method="post" enctype="multipart/form-data">
 		
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_616d150d4b99c">Áo hoodie Mèo Nyanko-sensei - anime Natsume Yuujinchou số lượng</label>
-		<input type="number" id="quantity_616d150d4b99c" class="input-text qty text" step="1" min="1" max="4" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
+				<label class="screen-reader-text" for="quantity_616d18c86ced5">Áo hoodie Mèo Nyanko-sensei - anime Natsume Yuujinchou số lượng</label>
+		<input type="number" id="quantity_616d18c86ced5" class="input-text qty text" step="1" min="1" max="4" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="420" class="single_add_to_cart_button button alt">Thêm vào giỏ hàng</button>
@@ -723,7 +723,7 @@ h1, h2, h3, h4, h5, h6, .hestia-title, .hestia-title.title-in-content, p.meta-in
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="49ad9d9693"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js" name="ak_js" value="201"><script>document.getElementById( "ak_js" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js" name="ak_js" value="16"><script>document.getElementById( "ak_js" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 				</div>
