--- a/product/ao-khoac-pikachu-anime-pokemon/index.html
+++ b/product/ao-khoac-pikachu-anime-pokemon/index.html
@@ -664,8 +664,8 @@ h1, h2, h3, h4, h5, h6, .hestia-title, .hestia-title.title-in-content, p.meta-in
 <div class="woocommerce-variation-add-to-cart variations_button">
 	
 		<div class="quantity">
-				<label class="screen-reader-text" for="quantity_616d150ebb593">Áo khoác Pikachu - anime Pokemon số lượng</label>
-		<input type="number" id="quantity_616d150ebb593" class="input-text qty text" step="1" min="1" max="10" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
+				<label class="screen-reader-text" for="quantity_616d18cbb0404">Áo khoác Pikachu - anime Pokemon số lượng</label>
+		<input type="number" id="quantity_616d18cbb0404" class="input-text qty text" step="1" min="1" max="10" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
 			</div>
 	
 	<button type="submit" class="single_add_to_cart_button button alt">Thêm vào giỏ hàng</button>
@@ -760,7 +760,7 @@ h1, h2, h3, h4, h5, h6, .hestia-title, .hestia-title.title-in-content, p.meta-in
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="4251374a92"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js" name="ak_js" value="207"><script>document.getElementById( "ak_js" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js" name="ak_js" value="112"><script>document.getElementById( "ak_js" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 				</div>
