--- a/product/tai-nghe-anime-naruto-mau-2/index.html
+++ b/product/tai-nghe-anime-naruto-mau-2/index.html
@@ -649,8 +649,8 @@ h1, h2, h3, h4, h5, h6, .hestia-title, .hestia-title.title-in-content, p.meta-in
 	<form class="cart" action="https://annthuy.github.io/nhuthuy_wordpress/product/tai-nghe-anime-naruto-mau-2/" method="post" enctype="multipart/form-data">
 		
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_616d14b41fcb3">Tai nghe anime Naruto - Mẫu 2 số lượng</label>
-		<input type="number" id="quantity_616d14b41fcb3" class="input-text qty text" step="1" min="1" max="6" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
+				<label class="screen-reader-text" for="quantity_616d1877904f7">Tai nghe anime Naruto - Mẫu 2 số lượng</label>
+		<input type="number" id="quantity_616d1877904f7" class="input-text qty text" step="1" min="1" max="6" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="460" class="single_add_to_cart_button button alt">Thêm vào giỏ hàng</button>
@@ -721,7 +721,7 @@ h1, h2, h3, h4, h5, h6, .hestia-title, .hestia-title.title-in-content, p.meta-in
 <input type="hidden" name="comment_parent" id="comment_parent" value="0">
 </p>
 <p style="display: none;"><input type="hidden" id="akismet_comment_nonce" name="akismet_comment_nonce" value="34a3809e07"></p>
-<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js" name="ak_js" value="116"><script>document.getElementById( "ak_js" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
+<p style="display: none !important;"><label>&#916;<textarea name="ak_hp_textarea" cols="45" rows="8" maxlength="100"></textarea></label><input type="hidden" id="ak_js" name="ak_js" value="229"><script>document.getElementById( "ak_js" ).setAttribute( "value", ( new Date() ).getTime() );</script></p>
 </form>	</div>
 <!-- #respond -->
 				</div>
